# lastre

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  Dockerfile  Dockerfile.app-api  FUGU_PROMPT_VERCEL_RENDER.md  FUGU_ROBUST_WORKPLAN_USABILITY_NFT_DEFI.md  JUDGES_PLAYBOOK.md  LICENSE  LICENSE-APACHE  LICENSE-BUSL  Makefile  NOTICE  PROGRESS.md  README.md  SECURITY.md  SUPPORT.md  package-lock.json  package.json  vercel.json  wrangler.jsonc
.cursor/: mcp.json
.github/: ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md
.playwright-mcp/: page-2026-07-22T20-14-24-969Z.yml  page-2026-07-22T20-30-10-006Z.yml  page-2026-07-22T20-30-37-600Z.yml  page-2026-07-22T20-54-19-370Z.yml  page-2026-07-22T20-55-47-729Z.yml  page-2026-07-22T20-56-07-070Z.yml  page-2026-07-22T20-57-36-185Z.yml  page-2026-07-22T20-57-39-955Z.yml  page-2026-07-22T20-58-04-531Z.yml  page-2026-07-22T20-59-12-104Z.yml  page-2026-07-22T20-59-26-862Z.yml  page-2026-07-22T21-00-21-195Z.yml  page-2026-07-22T21-00-31-630Z.yml  page-2026-07-22T21-00-54-414Z.yml  page-2026-07-22T21-02-01-506Z.yml  page-2026-07-22T21-02-35-193Z.yml  page-2026-07-22T21-03-32-892Z.yml  page-2026-07-22T21-03-42-653Z.yml
agent/: README.md
app/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
contracts/lastro_origin/: CHANGELOG.md  Cargo.toml  Odra.toml  README.md  build.rs
contracts/lastro_origin/src/: lib.rs  mint_gate.rs  proof_of_origin.rs
design-system/: DESIGN_SYNC.md  README.md  product-marketing-context.md
docs/: API_CONTRACT.md  APP-UI-ARCHITECTURE.md  (+58 more)
(+563 files in other folders)
