[package]
edition = "2021"
name = "lastro_contracts"
version = "0.1.0"
license = "Apache-2.0"

[dependencies]
odra = { version = "2.8.0", features = [], default-features = false }
odra-casper-livenet-env = { version = "2.8.0", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
livenet = ["odra-casper-livenet-env", "serde_json"]

[dev-dependencies]
odra-test = { version = "2.8.0", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "2.8.0", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.8.0", features = [], default-features = false }
odra-cli = { version = "2.8.0", features = [], default-features = false }

[[bin]]
name = "lastro_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "lastro_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "lastro_contracts_cli"
path = "bin/cli.rs"
test = false


[[bin]]
name = "deploy"
path = "bin/deploy.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "query"
path = "bin/query.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "query_snapshot"
path = "bin/query_snapshot.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "attest"
path = "bin/attest.rs"
required-features = ["livenet"]
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
